--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <div class="calculator">
       <input type="text"  placeholder="0" name = "screen" id="1" oninput="input();" onsubmit = "ent('=');" disabled>
-      <button onclick="ent('CL');">CL</button>
-      <button onclick="ent('DEL');">DEL</button>
+      <button onclick="ent('DEL');">CL</button>
+      <button onclick="ent('CL');">DEL</button>
       <button onclick="ent('%');">%</button>
       <button onclick="ent('/');">÷</button>
       <button onclick="ent('7');">7</button>
