--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>calculator</title>
   <link rel="stylesheet" href="style.css">
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3013304727132583"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
